<resources>
    <string name="app_name">Securaguardapp</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="user_details">User Details:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="submit">Submit</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
</resources>